--- a/KernelWorld.latex
+++ b/KernelWorld.latex
@@ -13,9 +13,9 @@
     \usepackage{fontspec}
   \fi
   \defaultfontfeatures{Ligatures=TeX,Scale=MatchLowercase}
-    \setmainfont[]{AR PL New Sung}
+    \setmainfont[]{FZBaoSong-Z04S}
     \usepackage{xeCJK}
-    \setCJKmainfont[BoldFont=WenQuanYi Zen Hei,ItalicFont=STFangsong,Scale=1.0]{AR PL New Sung}
+    \setCJKmainfont[BoldFont=FZMeiHei-M07S,ItalicFont=STFangsong,Scale=1.0]{FZBaoSong-Z04S}
     \setlength{\parindent}{0pt} % 設定縮排
 	\linespread{1.3} % 設定行距
 	\setlength{\parskip}{16pt} % 設定段落間距    
