--- a/KernelWorld.latex
+++ b/KernelWorld.latex
@@ -377,4 +377,29 @@ prorcess就是一个空壳，实实在在就是一个zombie！那么为什么chi
 process执行完成后，内核还要保留这样一个zombie
 process呢？这个问题作为本篇文章的读后思考问题，阿男下篇文章为大家进行讲解。
 
+\section{为什么要有zombie
+process？}\label{ux4e3aux4ec0ux4e48ux8981ux6709zombie-process}
+
+阿男在上篇文章里给大家留了一个问题：child process退出后，此时parent
+process还没退出，为什么child process此时要保留一个zombie process？
+
+答案是：这是为了进程间同步而考虑。
+
+Linux提供了一个函数叫做\texttt{waitpid}：
+
+\begin{verbatim}
+WAIT(2)                                                         Linux 
+Programmer's Manual                                                         
+WAIT(2)
+
+NAME
+       wait, waitpid, waitid - wait for process to change state
+
+SYNOPSIS
+       #include <sys/types.h>
+       #include <sys/wait.h>
+
+       pid_t wait(int *status);
+\end{verbatim}
+
 \end{document}
