--- a/09.md
+++ b/09.md
@@ -2,7 +2,7 @@
 
 我们这篇文章里来写段代码使用`wait`函数：
 
-```wait.c
+```c
 #include <sys/wait.h>
 #include <stdlib.h>
 #include <unistd.h>
@@ -32,13 +32,13 @@ int main(int argc, char *argv[]) {
 
 编译上面的代码：
 
-```
+```bash
 $ cc wait.c -o wait
 ```
 
 然后执行结果如下：
 
-```
+```bash
 $ ./wait 
 parent process waiting for child to exit...
 child process sleep for 3 seconds...
@@ -50,7 +50,7 @@ parent process exit
 
 关于`wait`函数的定义：
 
-```
+```c
 pid_t wait(int *status);
 ```
 
