--- a/08.md
+++ b/08.md
@@ -1,6 +1,6 @@
 『阿男的Linux内核世界』＊08 wait的使用方法＊
 
-# 在前面几篇文章里，阿男带大家学习了process的方方面面：我们学习了什么是process，process的继承关系，用`fork`函数创建了child process，然后学习了process的状态。在这篇文章里面，阿男带大家学习使用`wait`函数，来让parent process来等待child process执行完成。
+在前面几篇文章里，阿男带大家学习了process的方方面面：我们学习了什么是process，process的继承关系，用`fork`函数创建了child process，然后学习了process的状态。在这篇文章里面，阿男带大家学习使用`wait`函数，来让parent process来等待child process执行完成。
 
 我们可以使用`man`命令来查看`wait`函数：
 
@@ -10,7 +10,7 @@ $ man 2 wait
 
 可以看到`wait`一族函数的相关说明：
 
-```man
+```c
 WAIT(2)                                                         Linux Programmer's Manual                                                         WAIT(2)
 
 NAME
@@ -33,19 +33,18 @@ SYNOPSIS
 
 关于`man`命令的section，可以通过`man man`命令查看：
 
-```man
-       The table below shows the section numbers of the manual followed by the types of pages they contain.
+> The table below shows the section numbers of the manual followed by the types of pages they contain.
+> 
+> 1   Executable programs or shell commands
+> 2   System calls (functions provided by the kernel)
+> 3   Library calls (functions within program libraries)
+> 4   Special files (usually found in /dev)
+> 5   File formats and conventions eg /etc/passwd
+> 6   Games
+> 7   Miscellaneous (including macro packages and conventions), e.g. man(7), groff(7)
+> 8   System administration commands (usually only for root)
+> 9   Kernel routines [Non standard]
 
-       1   Executable programs or shell commands
-       2   System calls (functions provided by the kernel)
-       3   Library calls (functions within program libraries)
-       4   Special files (usually found in /dev)
-       5   File formats and conventions eg /etc/passwd
-       6   Games
-       7   Miscellaneous (including macro packages and conventions), e.g. man(7), groff(7)
-       8   System administration commands (usually only for root)
-       9   Kernel routines [Non standard]
-```
 
 可以看到section 2是对应system calls的相关文档。接下来我们具体看一下`wait`函数的具体定义：
 
