add pdf generation tool

--- a/09.md
+++ b/09.md
@@ -1,4 +1,14 @@
-『阿男的Linux内核世界』＊09 使用wait来协调process的执行顺序＊
+---
+title: "『阿男的Linux内核世界』＊09 使用wait来协调process的执行顺序＊"
+author: 阿男
+date: Dec 31, 2016
+CJKmainfont: "FZBaoSong-Z04S"
+CJKoptions:
+  - BoldFont=FZMeiHei-M07S
+  - ItalicFont=STFangsong
+  - Scale=1.0
+
+---
 
 # 我们这篇文章里来写段代码使用`wait`函数：
 
