--- a/09.md
+++ b/09.md
@@ -1,16 +1,15 @@
 ---
-title: "『阿男的Linux内核世界』＊09 使用wait来协调process的执行顺序＊"
-author: 阿男
-date: Dec 31, 2016
-CJKmainfont: "FZBaoSong-Z04S"
+mainfont: "STXihei"
+CJKmainfont: "STXihei"
 CJKoptions:
-  - BoldFont=FZMeiHei-M07S
+  - BoldFont=STHeiti
   - ItalicFont=STFangsong
   - Scale=1.0
-
 ---
 
-# 我们这篇文章里来写段代码使用`wait`函数：
+#『阿男的Linux内核世界』＊09 使用wait来协调process的执行顺序＊
+
+我们这篇文章里来写段代码使用`wait`函数：
 
 ```c
 #include <sys/wait.h>
@@ -19,21 +18,21 @@ CJKoptions:
 #include <stdio.h>
 
 int main(int argc, char *argv[]) {
-  pid_t pid = fork(); // create a child process                                                                                                              
+  pid_t pid = fork();
 
   if (pid == -1) {
     perror("fork");
     exit(EXIT_FAILURE);
   }
 
-  if (pid == 0) { // I am child process                                                                                                                      
+  if (pid == 0) {
     printf("child process sleep for 3 seconds...\n");
-    sleep(3); // sleep for 3 seconds so parent process needs to wait child process to exit                                                                   
+    sleep(3);
     printf("child process exit.\n");
 
-  } else { // I am parent process                                                                                                                            
+  } else {
     printf("parent process waiting for child to exit...\n");
-    wait(0); // Wait for child process to exit                                                                                                               
+    wait(0);
     printf("parent process exit\n");
   }
 ```
