--- a/07.md
+++ b/07.md
@@ -1,4 +1,4 @@
-『阿男的Linux内核世界』＊07 process的各种状态＊
+# 『阿男的Linux内核世界』＊07 process的各种状态＊
 
 # 我们在上一篇文章学习了zombie process的保留原因，是因为kernel要管理这些processes，就需要管理和维护它们的各种状态。而当process退出的时候，这种「退出」实际上也是一种状态，因此kernel会释放掉这个process所占有的所有资源，但给这个process保留一个壳，也就变成了zombie process。
 
