--- a/08.md
+++ b/08.md
@@ -1,6 +1,6 @@
-『阿男的Linux内核世界』＊08 wait的使用方法＊
+# 『阿男的Linux内核世界』＊08 wait的使用方法＊
 
-# 在前面几篇文章里，阿男带大家学习了process的方方面面：我们学习了什么是process，process的继承关系，用`fork`函数创建了child process，然后学习了process的状态。在这篇文章里面，阿男带大家学习使用`wait`函数，来让parent process来等待child process执行完成。
+在前面几篇文章里，阿男带大家学习了process的方方面面：我们学习了什么是process，process的继承关系，用`fork`函数创建了child process，然后学习了process的状态。在这篇文章里面，阿男带大家学习使用`wait`函数，来让parent process来等待child process执行完成。
 
 我们可以使用`man`命令来查看`wait`函数：
 
